[package]
name = "owbalancer"
description = "Overwatch tournament balancer in Rust, WASM"
version = "1.2.0"
authors = ["Artjoms Travkovs <atravkovs@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]

[dependencies]
flo_curves = "0.4"
console_error_panic_hook = "0.1.5"
wee_alloc = { version = "0.4.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.7", features = ["wasm-bindgen"] }
uuid = { version = "0.8", features = ["wasm-bindgen", "v4", "serde"] }
wasm-bindgen = { version = "0.2.45", features = ["serde-serialize"] }

[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
